--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "gray-matter": "^4.0.3",
     "next": "13.0.0",
+    "remark-gfm": "^3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remark": "^14.0.2",
